--- a/risk_mapping/DRC/scripts/drc_risk_mapping.Rmd
+++ b/risk_mapping/DRC/scripts/drc_risk_mapping.Rmd
@@ -32,13 +32,14 @@ knitr::opts_chunk$set(echo = TRUE)
 
 ```{r message=FALSE, warning=FALSE}
 # loading shapefile with GPS coordinates of DHS clusters
-drc_gps <- rgdal::readOGR(dsn = paste0(directory, "/data/dhs_data/CDGE61FL"), layer = "CDGE61FL")
-
+drc_gps <- rgdal::readOGR(dsn = paste0(directory, "/input_data/dhs_data/CDGE61FL"), layer = "CDGE61FL")
+drc_gps2 <- drc_gps
 # loading shapefile of DRC Health Zones 
-drc_health_zones <- rgdal::readOGR(dsn = paste0(directory, "/data/shapefiles"), layer = "RDC_Micro_ZonesDeSante_Regroupees")
+drc_health_zones <- rgdal::readOGR(dsn = paste0(directory, "/input_data/shapefiles"), layer = "RDC_Micro_ZonesDeSante_Regroupees")
 
 # loading constructed dhs data
-drc_cluster <- readRDS( paste0(directory, "/data/constructed_data/drc_cluster.rds"))
+drc_cluster <- readRDS( paste0(directory, "/input_data/constructed_data/drc_cluster.rds"))
+drc_cluster2 <- readRDS( paste0(directory, "/input_data/constructed_data/drc_cluster2.rds"))
 ```
 
 
@@ -69,6 +70,36 @@ proj4string(drc_health_zones) == proj4string(drc_gps)
 #drc_health_zones <- spTransform(x = drc_health_zones, CRSobj = proj4string(drc_gps))
 ```
 
+
+
+```{r}
+# extracting coordinates from drc_gps SpatialPointsDataFrame object 
+
+drc_coords2 <- drc_gps2@coords
+# turn into dataframe 
+drc_coords2 <- as.data.frame(drc_coords2)
+# creating new column clusterid
+drc_coords2$clusterid <- NA
+drc_coords2$clusterid <- drc_gps$DHSCLUST
+# renaming columns
+colnames(drc_coords2) <- c("long", "lat", "clusterid")
+# removing cluster coordinates that are incorrect/missing (when both lat and long are = to 0)
+drc_coords2 <- drc_coords2[drc_coords2$long != 0, ]
+
+# merging coordinates data with the constructed data from the DHS survey
+drc_coords2 <- left_join(drc_coords2, drc_cluster2, by = "clusterid")
+
+# now merging the coordinates and constructed DHS data to the original SpatialPointsDataFrame drc_gps
+drc_gps2$clusterid <- drc_gps2$DHSCLUST
+drc_gps2@data <- left_join(x = drc_gps2@data, y = drc_coords2, by = "clusterid")
+
+# checking that drc_health_zones and drc_gps have the same coordinate reference system (CRS):
+proj4string(drc_health_zones) == proj4string(drc_gps2)
+
+# If the above line is false, then we need to transforming one of the object's CRS so that they match:
+#drc_health_zones <- spTransform(x = drc_health_zones, CRSobj = proj4string(drc_gps))
+```
+
 # Loading Raster Predictors 
 
 ```{r message=TRUE, warning=FALSE}
@@ -77,10 +108,10 @@ proj4string(drc_health_zones) == proj4string(drc_gps)
 # Based on the literature, we are using the following predictors: population density, nighttime lights and distance to road 
 
 # Loading predictor rasters:
-pop_density <- raster(paste0(directory, "/data/raster_predictors/cod_pd_2014_1km_UNadj.tif"))
-nighttime_lights2010 <- raster(paste0(directory, "/data/raster_predictors/cod_viirs_1km_2014.tif"))
-dist2road2016 <- raster(paste0(directory, "/data/raster_predictors/cod_osm_dst_road_1km_2016.tif"))
-
+pop_density <- raster(paste0(directory, "/input_data/raster_predictors/cod_pd_2014_1km_UNadj.tif"))
+nighttime_lights2010 <- raster(paste0(directory, "/input_data/raster_predictors/cod_viirs_1km_2014.tif"))
+dist2road2016 <- raster(paste0(directory, "/input_data/raster_predictors/cod_osm_dst_road_1km_2016.tif"))
+population2014 <- raster(paste0(directory, "/input_data/raster_predictors/cod_ppp_2014_1km_Aggregated.tif"))
 
 # creating raster for predictions 
 # Create an empty raster with the same extent and resolution as pop_density (extent and resolution of the DRC)
@@ -96,12 +127,11 @@ latitude_raster[] <- coordinates(latitude_raster)[,2]
 # Now create a final prediction stack of the 4 variables (predictors) we need
 pred_stack <- stack(pop_density,
                     nighttime_lights2010, 
-                    dist2road2016,
                     longitude_raster,
                     latitude_raster)
 
 # Rename to ensure the names of the raster layers in the stack match those used in the model
-names(pred_stack) <- c("pop_density", "nighttime_lights2010", "dist2road2016", "long", "lat")
+names(pred_stack) <- c("pop_density", "nighttime_lights2010", "long", "lat")
 ```
 
 
@@ -109,12 +139,16 @@ names(pred_stack) <- c("pop_density", "nighttime_lights2010", "dist2road2016", "
 
 ```{r message=FALSE, warning=FALSE}
 # extracting covariates: we need the values of the covariates at DHS cluster points in order to define the model 
+drc_coords2$pop_density <- raster::extract(pop_density, drc_coords2[, c("long", "lat")], fun = mean, na.rm = TRUE)
+drc_coords2$nighttime_lights2010 <- raster::extract(nighttime_lights2010, drc_coords2[, c("long", "lat")], fun = mean, na.rm = TRUE)
+drc_coords2$dist2road2016 <- raster::extract(dist2road2016, drc_coords2[, c("long", "lat")], fun = mean, na.rm = TRUE)
+
 drc_coords$pop_density <- raster::extract(pop_density, drc_coords[, c("long", "lat")], fun = mean, na.rm = TRUE)
 drc_coords$nighttime_lights2010 <- raster::extract(nighttime_lights2010, drc_coords[, c("long", "lat")], fun = mean, na.rm = TRUE)
 drc_coords$dist2road2016 <- raster::extract(dist2road2016, drc_coords[, c("long", "lat")], fun = mean, na.rm = TRUE)
 
 # beta geo-additive model with population density, nighttime light intensity and distance to nearest OSM road as covariates
-hwr_gam <- mgcv::gam(formula = hw_risk ~ s(long, lat, k = 100) + s(pop_density) + s(nighttime_lights2010) + s(dist2road2016), family = "betar", data =  drc_coords, weights = drc_coords$total_valid_hw)
+hwr_gam <- mgcv::gam(formula = hw_risk2 ~ s(long, lat, k = 100) + s(pop_density) + s(nighttime_lights2010), family = "betar", data =  drc_coords2, weights = drc_coords2$total_valid_hw2)
 
 # model summary
 summary(hwr_gam)
@@ -122,23 +156,45 @@ summary(hwr_gam)
 
 
 ```{r message=FALSE, warning=FALSE}
-  # predictions using stack of raster covariates - gridded surface - DO NOT RUN --> TIME-CONSUMING - PREDICTIONS HAVE BEEN SAVED
-#predicted_hwr <- predict(pred_stack, hwr_gam, type = "response")
+  # predictions using stack of raster covariates - gridded surface 
+predicted_hwr <- predict(pred_stack, hwr_gam, type = "response")
 
-  # extracting raster values and aggregating (mean) at the health zone level 
-#drc_health_zones$pred_hwr <- raster::extract(predicted_hwr, drc_health_zones, fun = mean, na.rm = TRUE)
-#pred_hwr <- drc_health_zones@data[, c("pred_hwr")]
+  # extracting raster values (predictions + population) 
+pred_hwr <- raster::stack(predicted_hwr, population2014)
+pred_hwr <- raster::extract(pred_hwr, drc_health_zones)
 
-  # saving predictions in csv file
-#write.csv(pred_hwr, paste0(directory, "/predictions/pred_hwr.csv"), row.names = FALSE)
+  # and aggregating (weighted mean based on population) at the health zone level
+drc_health_zones$pred_hwr <- unlist(lapply(pred_hwr, FUN = function(x) { weighted.mean(x=x[,1], w=x[,2], na.rm = TRUE) }))
+```
+
+## DHS Clusters: 
+
+```{r message=FALSE, warning=FALSE}
+
+# We are mapping the average proportion at DHS cluster points: 
+
+pal_hwr <- leaflet::colorBin(palette = "inferno", domain= drc_gps2$hw_risk2, bins = 15, reverse = TRUE)
+
+handwashing_cluster_interactive <- leaflet() %>% 
+  addTiles(group = "Esri") %>% 
+  addProviderTiles("CartoDB", group = "Carto") %>%  
+  setView(lng = 22.68245, lat = -3.268139, zoom = 5) %>%
+  addPolygons(data = drc_health_zones, color = "#444444", weight = 0.5, smoothFactor = 0.5, opacity = 1.0, highlightOptions = highlightOptions(color = "white", weight = 2)) %>%
+  addCircleMarkers(data = drc_gps2, radius = 2, color = pal_hwr(drc_gps2$hw_risk2), 
+                   label = paste0("Hand-Washing Risk Index: ", drc_gps2$hw_risk2)) %>% 
+  addLegend("bottomright", pal = pal_hwr, values = drc_gps2$hw_risk2, title = "Hand-Washing Risk Index") %>%
+  addResetMapButton() %>% 
+  addEasyButton(easyButton(icon="fa-crosshairs", title="Locate Me", onClick=JS("function(btn, map){ map.locate({setView: true}); }")))
+
+handwashing_cluster_interactive
+htmlwidgets::saveWidget(handwashing_cluster_interactive, file = paste0(directory, "/outputs/handwashing_cluster_interactive.html"))
 ```
 
 
 ## Health Zone Level - Static
 
+
 ```{r message=FALSE, warning=FALSE}
-pred_hwr <- read.csv(paste0(directory, "/predictions/pred_hwr.csv"))
-drc_health_zones$pred_hwr <- pred_hwr$V1
 
 # transforming drc polygon into dataframe compatible with ggplot2 syntax 
 drc_health_zones@data$id <- 1:315
@@ -159,7 +215,9 @@ ggplot() + theme_map() + labs(title = "DRC Health Zone Hand-Washing Risk Score")
 ggsave(paste0(directory, "/outputs/hw_healthzone.jpeg"), height = 8, width = 12, dpi = 1000)
 ```
 
+
 ## Health Zone Level - Interactive
+
 
 ```{r message=FALSE, warning=FALSE}
 # color palette for hand-washing risk score
@@ -188,9 +246,10 @@ htmlwidgets::saveWidget(handwashing_interactive, file = paste0(directory, "/outp
 
 # Risk Factor 2: Proportion of Anemic Individuals
 
+
 ```{r}
 # beta geo-additive model with population density, nighttime light intensity and distance to nearest OSM road as covariates
-anemia_prop_gam <- mgcv::gam(formula = anemia_prop ~ s(long, lat, k = 200) + s(pop_density), family = "betar", data =  drc_coords, weights = drc_coords$total_valid_anemia)
+anemia_prop_gam <- mgcv::gam(formula = cbind(total_anemia, total_non_anemia) ~ s(long, lat, k = 100) + s(pop_density), family = "binomial", data =  drc_coords)
 
 # model summary
 summary(anemia_prop_gam)
@@ -216,6 +275,17 @@ predicted_anemia_prop <- predict(pred_stack2, anemia_prop_gam, type = "response"
   # saving predictions aggregated at health zone level 
 #write.csv(pred_anemia_prop, paste0(directory, "/predictions/pred_anemia_prop.csv"), row.names = FALSE)
 
+
+  # predictions using stack of raster covariates - gridded surface 
+predicted_anemia_prop <- predict(pred_stack2, anemia_prop_gam, type = "response")
+
+  # extracting raster values (predictions + population) 
+pred_anemia_prop <- raster::stack(predicted_anemia_prop, population2014)
+pred_anemia_prop <- raster::extract(pred_anemia_prop, drc_health_zones)
+
+  # and aggregating (weighted mean based on population) at the health zone level
+drc_health_zones$pred_anemia_prop <- unlist(lapply(pred_anemia_prop, FUN = function(x) { weighted.mean(x=x[,1], w=x[,2], na.rm = TRUE) }))
+
 ```
 
 ## DHS Clusters: 
@@ -224,22 +294,42 @@ predicted_anemia_prop <- predict(pred_stack2, anemia_prop_gam, type = "response"
 
 # We are mapping the average proportion at DHS cluster points: 
 
-# transforming drc polygon into dataframe compatible with ggplot2 syntax 
-drc_health_zones@data$id <- 1:315
-drc_health_zones_df <- fortify(drc_health_zones, region='id')
- 
+pal_anemia <- leaflet::colorBin(palette = "inferno", domain= drc_gps$anemia_prop, bins = 15, reverse = TRUE)
 
-ggplot() + theme_map() + labs(title = "DRC DHS Cluster Proportion of Anemic Men and Women")  +
-  geom_polygon(data = drc_health_zones_df, aes(x = long, y = lat, group = id), color = "gray25", fill = "gray95", size = 0.5) +
-  geom_point(data = drc_coords, aes(x = long, y = lat, color = anemia_prop), alpha = 0.8, size = 3) + 
-  scale_color_viridis(option="magma", direction = -1) + labs(color = "Anemia Prevelance (Proportion)") +
-  theme(plot.title = element_text(color = "darkblue", size = 30, face = "bold", hjust = 0.5), 
-        legend.background = element_rect(color = "gray25", fill = "gray95"), 
-        legend.title = element_text(color = "darkblue", size = 20, face = "bold", hjust = 0.5), 
-        legend.text = element_text(color = "darkblue", size = 16, face = "bold", hjust = 0.5), 
-        legend.position = c(0.1, 0.01))
+anemia_cluster <- leaflet() %>% 
+  addTiles(group = "Esri") %>% 
+  addProviderTiles("CartoDB", group = "Carto") %>%  
+  setView(lng = 22.68245, lat = -3.268139, zoom = 5) %>%
+  addPolygons(data = drc_health_zones, color = "#444444", weight = 0.5, smoothFactor = 0.5, opacity = 1.0, highlightOptions = highlightOptions(color = "white", weight = 2)) %>%
+  addCircleMarkers(data = drc_gps, radius = 2, color = pal_anemia(drc_gps$anemia_prop), 
+                   label = paste0("Anemia Proportion: ", drc_gps$anemia_prop),
+                   popup = paste0("Valid Observations: ", drc_gps$total_valid_anemia)) %>% 
+  addLegend("bottomright", pal = pal_anemia, values = drc_gps$anemia_prop, title = "Anemia Proportion") %>%
+  addResetMapButton() %>% 
+  addEasyButton(easyButton(icon="fa-crosshairs", title="Locate Me", onClick=JS("function(btn, map){ map.locate({setView: true}); }")))
 
-ggsave(paste0(directory, "/outputs/anemia_prop_cluster_points.jpeg"), height = 8, width = 12, dpi = 1000)
+
+htmlwidgets::saveWidget(anemia_cluster, file = paste0(directory, "/outputs/anemia_cluster.html"))
+```
+
+## Raster of Predictions Interactive 
+
+```{r message=FALSE, warning=FALSE}
+pal_anemia_prop <- leaflet::colorNumeric(palette = "inferno", domain= values(predicted_anemia_prop), reverse = TRUE)
+
+anemia_raster <- leaflet() %>% 
+  addTiles(group = "Esri") %>% 
+  addProviderTiles("CartoDB", group = "Carto") %>%  
+  setView(lng = 22.68245, lat = -3.268139, zoom = 5) %>%
+  addPolygons(data = drc_health_zones, color = "#444444", weight = 0.5, smoothFactor = 0.5, opacity = 1.0, highlightOptions = highlightOptions(color = "white", weight = 2)) %>%
+  addRasterImage(predicted_anemia_prop, colors = pal_anemia_prop, opacity = 0.7) %>% 
+  addLegend("bottomright", pal = pal_anemia_prop, values = values(predicted_anemia_prop), title = "Anemia Proportion") %>%
+  addResetMapButton() %>% 
+  addEasyButton(easyButton(icon="fa-crosshairs", title="Locate Me", onClick=JS("function(btn, map){ map.locate({setView: true}); }")))
+
+anemia_raster
+
+htmlwidgets::saveWidget(anemia_raster, file = paste0(directory, "/outputs/anemia_raster.html"))
 ```
 
 
@@ -247,8 +337,6 @@ ggsave(paste0(directory, "/outputs/anemia_prop_cluster_points.jpeg"), height = 8
 
 
 ```{r message=FALSE, warning=FALSE}
-pred_anemia_prop <- read.csv(paste0(directory, "/predictions/pred_anemia_prop.csv"))
-drc_health_zones$pred_anemia_prop <- pred_anemia_prop$V1
 
 # transforming drc polygon into dataframe compatible with ggplot2 syntax for static mapping
 drc_health_zones@data$id <- 1:315
@@ -296,15 +384,12 @@ htmlwidgets::saveWidget(anemia_interactive, file = paste0(directory, "/outputs/a
 ```
 
 
-# Risk Factor 3: Proportion of Obese and Overweight Individuals
+# Risk Factor 3: Proportion of Obese Individuals
 
 
 ```{r message=FALSE, warning=FALSE}
-# adding the proportions of obese and overweight individuals together
-drc_coords$obow_prop <- drc_coords$obese_prop + drc_coords$ow_prop
-
-# beta geo-additive model with population density, nighttime light intensity and distance to nearest OSM road as covariates
-obese_gam <- mgcv::gam(formula = obow_prop ~ s(long, lat, k = 250) + s(pop_density) + s(nighttime_lights2010), family = "betar", data =  drc_coords, weights = drc_coords$total_valid_bmi)
+# binomial geo-additive model with population density, nighttime light intensity and distance to nearest OSM road as covariates
+obese_gam <- mgcv::gam(formula = cbind(obese_total, total_non_obese) ~ s(long, lat, k = 100) + s(pop_density) + s(nighttime_lights2010), family = "binomial", data =  drc_coords)
 
 # model summary
 summary(obese_gam)
@@ -321,22 +406,69 @@ pred_stack3 <- stack(pop_density,
   # Rename to ensure the names of the raster layers in the stack match those used in the model
 names(pred_stack3) <- c("pop_density", "nighttime_lights2010", "long", "lat")
 
-  # predictions over DRC gridded surface using stack of raster covariates  - DO NOT RUN --> TIME-CONSUMING - PREDICTIONS HAVE BEEN SAVED
-#predicted_obese <- predict(pred_stack3, obese_gam, type = "response")
+# predictions 
+predicted_obese3 <- predict(pred_stack3, obese_gam, type = "response")
 
-  # extracting raster values- DO NOT RUN --> TIME-CONSUMING - PREDICTIONS HAVE BEEN SAVED
-#drc_health_zones$pred_obese <- raster::extract(predicted_obese, drc_health_zones, fun = mean, na.rm = TRUE)
-#pred_obese <- drc_health_zones@data[, c("pred_obese")]
-#write.csv(pred_obese, paste0(directory, "/predictions/pred_obese.csv"), row.names = FALSE)
+# extracting raster values (predictions + population) 
+pred_obese <- raster::stack(predicted_obese3, population2014)
+pred_obese <- raster::extract(pred_obese, drc_health_zones)
+
+# and aggregating (weighted mean based on population) at the health zone level
+drc_health_zones$pred_obese <- unlist(lapply(pred_obese, FUN = function(x) { weighted.mean(x=x[,1], w=x[,2], na.rm = TRUE) }))
+
 ```
+
+
+## DHS Clusters: 
+
+
+```{r message=FALSE, warning=FALSE}
+
+# We are mapping the average proportion at DHS cluster points: 
+
+pal_obese <- leaflet::colorBin(palette = "inferno", domain= drc_gps$obese_prop, bins = 15, reverse = TRUE)
+
+obesity_cluster <- leaflet() %>% 
+  addTiles(group = "Esri") %>% 
+  addProviderTiles("CartoDB", group = "Carto") %>%  
+  setView(lng = 22.68245, lat = -3.268139, zoom = 5) %>%
+  addPolygons(data = drc_health_zones, color = "#444444", weight = 0.5, smoothFactor = 0.5, opacity = 1.0, highlightOptions = highlightOptions(color = "white", weight = 2)) %>%
+  addCircleMarkers(data = drc_gps, radius = 2, color = pal_obese(drc_gps$obese_prop), 
+                   label = paste0("Obesity Proportion: ", drc_gps$obese_prop),
+                   popup = paste0("Valid Observations: ", drc_gps$total_valid_bmi)) %>% 
+  addLegend("bottomright", pal = pal_obese, values = drc_gps$obese_prop, title = "Obesity Proportion") %>%
+  addResetMapButton() %>% 
+  addEasyButton(easyButton(icon="fa-crosshairs", title="Locate Me", onClick=JS("function(btn, map){ map.locate({setView: true}); }")))
+
+
+htmlwidgets::saveWidget(obesity_cluster, file = paste0(directory, "/outputs/obesity_cluster.html"))
+```
+
+
+## Raster of Predictions Interactive 
+
+
+```{r message=FALSE, warning=FALSE}
+pal_obese_prop <- leaflet::colorNumeric(palette = "inferno", domain= values(predicted_obese3), reverse = TRUE)
+
+leaflet() %>% 
+  addTiles(group = "Esri") %>% 
+  addProviderTiles("CartoDB", group = "Carto") %>%  
+  setView(lng = 22.68245, lat = -3.268139, zoom = 5) %>%
+  addPolygons(data = drc_health_zones, color = "#444444", weight = 0.5, smoothFactor = 0.5, opacity = 1.0, highlightOptions = highlightOptions(color = "white", weight = 2)) %>%
+  addRasterImage(predicted_obese3, colors = pal_obese_prop, opacity = 0.7) %>% 
+  addLegend("bottomright", pal = pal_obese_prop, values = values(predicted_obese3), title = "Obesity Proportion") %>%
+  addResetMapButton() %>% 
+  addEasyButton(easyButton(icon="fa-crosshairs", title="Locate Me", onClick=JS("function(btn, map){ map.locate({setView: true}); }")))
+
+htmlwidgets::saveWidget(obesity_interactive, file = paste0(directory, "/outputs/obesity_interactive.html"))
+```
+
 
 ## Health Zone-Level - Static
 
+
 ```{r message=FALSE, warning=FALSE}
-pred_obese <- read.csv(paste0(directory, "/predictions/pred_obese.csv"))
-drc_health_zones$pred_obese <- pred_obese$V1
-
-
 # transforming drc polygon into dataframe compatible with ggplot2 syntax 
 drc_health_zones@data$id <- 1:315
 drc_health_zones_df <- fortify(drc_health_zones, region='id')
@@ -348,12 +480,13 @@ ggplot() + theme_map() + labs(title = "DRC Health Zone Obesity Prevalence")  +
   geom_polygon(data = drc_health_zones_df, aes(x = long, y = lat, group = id, fill = pred_obese), color = "white", size = 0.8) +
   scale_fill_viridis(option="viridis", direction = -1) + labs(fill = "Obesity Prevalence (Proportion)") +
   theme(plot.title = element_text(color = "darkblue", size = 30, face = "bold", hjust = 0.5), 
+        
         legend.background = element_rect(color = "gray25", fill = "gray95"), 
         legend.title = element_text(color = "darkblue", size = 20, face = "bold", hjust = 0.5), 
         legend.text = element_text(color = "darkblue", size = 15, face = "bold", hjust = 0.5), 
         legend.position = c(0., 0.01))
 
-ggsave(paste0(directory, "/outputs/obesity_healthzone.jpeg"), height = 8, width = 12, dpi = 1000)
+ggsave(paste0(directory, "/outputs/obesity_healthzone.jpeg"), height = 8, width = 13, dpi = 1000)
 
 ```
 
@@ -362,7 +495,7 @@ ggsave(paste0(directory, "/outputs/obesity_healthzone.jpeg"), height = 8, width 
 
 ```{r message=FALSE, warning=FALSE}
 # color palette for obesity/overweight proportion that fits the data distribution:
-pal_obese <- leaflet::colorBin(palette = "viridis", domain= drc_health_zones$pred_obese, bins = c(0.01, 0.02, 0.03, 0.04, 0.05, 0.06, 0.07, 0.08, 0.1, 0.15, 0.2, 0.25, 0.30, 0.40, 0.55), reverse = TRUE, na.color = "white")
+pal_obese <- leaflet::colorBin(palette = "viridis", domain= drc_health_zones$pred_obese, bins = c(0.001, 0.0025, 0.005, 0.0075, 0.01, 0.0125, 0.015, 0.020, 0.025, 0.03, 0.04, 0.05, 0.06, 0.075, 0.10, 0.125, 0.155), reverse = TRUE, na.color = "white")
 
 obesity_interactive <- leaflet() %>% 
   addTiles(group = "Esri") %>% 
@@ -389,7 +522,8 @@ htmlwidgets::saveWidget(obesity_interactive, file = paste0(directory, "/outputs/
 
 ```{r message=FALSE, warning=FALSE}
 # beta geo-additive model with population density, nighttime light intensity and distance to nearest OSM road as covariates
-smoking_prop_gam <- mgcv::gam(formula = smoke_prop ~ s(long, lat, k = 250) + s(pop_density), family = "betar", data =  drc_coords, weights = drc_coords$total_valid_smoke)
+smoking_prop_gam <- mgcv::gam(formula = cbind(total_smoking, total_non_smoke) ~ s(long, lat, k = 100) + s(pop_density),
+                              family = "binomial", data =  drc_coords)
 
 # model summary
 summary(smoking_prop_gam)
@@ -406,50 +540,79 @@ names(pred_stack2) <- c("pop_density", "long", "lat")
 
 
 
-  # predictions using stack of raster covariates - gridded surface
+# predictions using stack of raster covariates - gridded surface
 predicted_smoking_prop <- predict(pred_stack2, smoking_prop_gam, type = "response")
 
-  # extracting raster values- DO NOT RUN --> TIME-CONSUMING - PREDICTIONS HAVE BEEN SAVED
-#drc_health_zones$pred_smoking_prop <- raster::extract(predicted_smoking_prop, drc_health_zones, fun = mean, na.rm = TRUE)
-pred_smoking_prop <- drc_health_zones@data[, c("pred_smoking_prop")]
+# extracting raster values
+pred_smoking_prop <- raster::stack(predicted_smoking_prop, population2014)
+pred_smoking_prop <- raster::extract(pred_smoking_prop, drc_health_zones)
 
-write.csv(pred_smoking_prop, paste0(directory, "/predictions/pred_smoking_prop.csv"), row.names = FALSE)
+# and aggregating (weighted mean based on population) at the health zone level
+drc_health_zones$pred_smoking_prop <- unlist(lapply(pred_smoking_prop, FUN = function(x) { weighted.mean(x=x[,1], w=x[,2], na.rm = TRUE) }))
+
 ```
 
-## Gridded Surface Predictions Plot
+
+
+## DHS Clusters: 
+
 
 ```{r message=FALSE, warning=FALSE}
-pred_smoking_prop <- read.csv(paste0(directory, "/predictions/pred_smoking_prop.csv"))
-drc_health_zones$pred_smoking_prop <- pred_smoking_prop$V1
-predicted_smoking_prop_df <- as.data.frame(predicted_smoking_prop, xy = TRUE)
 
+# We are mapping the average proportion at DHS cluster points: 
+
+pal_smoking <- leaflet::colorBin(palette = "inferno", domain= drc_gps$smoke_prop, bins = 15, reverse = TRUE)
+
+smoking_cluster <- leaflet() %>% 
+  addTiles(group = "Esri") %>% 
+  addProviderTiles("CartoDB", group = "Carto") %>%  
+  setView(lng = 22.68245, lat = -3.268139, zoom = 5) %>%
+  addPolygons(data = drc_health_zones, color = "#444444", weight = 0.5, smoothFactor = 0.5, opacity = 1.0, highlightOptions = highlightOptions(color = "white", weight = 2)) %>%
+  addCircleMarkers(data = drc_gps, radius = 2, color = pal_smoking(drc_gps$smoke_prop), 
+                   label = paste0("Smoking Proportion: ", drc_gps$smoke_prop),
+                   popup = paste0("Valid Observations: ", drc_gps$total_valid_smoke)) %>% 
+  addLegend("bottomright", pal = pal_smoking, values = drc_gps$smoke_prop, title = "Smoking Proportion") %>%
+  addResetMapButton() %>% 
+  addEasyButton(easyButton(icon="fa-crosshairs", title="Locate Me", onClick=JS("function(btn, map){ map.locate({setView: true}); }")))
+
+
+htmlwidgets::saveWidget(smoking_cluster, file = paste0(directory, "/outputs/smoking_cluster.html"))
+```
+
+
+## Raster of Predictions Interactive 
+
+
+```{r message=FALSE, warning=FALSE}
+pal_smoking_prop <- leaflet::colorNumeric(palette = "inferno", domain= values(predicted_smoking_prop), reverse = TRUE)
+
+smoking_raster <- leaflet() %>% 
+  addTiles(group = "Esri") %>% 
+  addProviderTiles("CartoDB", group = "Carto") %>%  
+  setView(lng = 22.68245, lat = -3.268139, zoom = 5) %>%
+  addPolygons(data = drc_health_zones, color = "#444444", weight = 0.5, smoothFactor = 0.5, opacity = 1.0, highlightOptions = highlightOptions(color = "white", weight = 2)) %>%
+  addRasterImage(predicted_smoking_prop, colors = pal_smoking_prop, opacity = 0.7) %>% 
+  addLegend("bottomright", pal = pal_smoking_prop, values = values(predicted_smoking_prop), title = "Smoking Proportion") %>%
+  addResetMapButton() %>% 
+  addEasyButton(easyButton(icon="fa-crosshairs", title="Locate Me", onClick=JS("function(btn, map){ map.locate({setView: true}); }")))
+
+htmlwidgets::saveWidget(smoking_raster, file = paste0(directory, "/outputs/smoking_raster.html"))
+```
+
+## Health Zone-Level - Static
+
+
+```{r message=FALSE, warning=FALSE}
 # transforming drc polygon into dataframe compatible with ggplot2 syntax 
 drc_health_zones@data$id <- 1:315
 drc_health_zones_df <- fortify(drc_health_zones, region='id')
 drc_health_zones$id <- as.character(drc_health_zones$id)
 drc_health_zones_df <-left_join(x = drc_health_zones_df, y = drc_health_zones@data[, c("id", "pred_smoking_prop")], by = "id")
 
-ggplot() + theme_map() + labs(title = "Smoking Prevalence (Proportion of Smokers)")  +
-  geom_polygon(data = drc_health_zones_df, aes(x = long, y = lat, group = id), fill = "white", color = "black", size = 0.7) +
-  geom_raster(data = predicted_smoking_prop_df, aes(x = x, y = y, fill = layer), alpha = 0.97) + 
-  scale_fill_viridis(option="plasma", begin = 0.2, end = 0.8, na.value = "white", direction = -1) + labs(fill = "Smoking Proportion") +
-  theme(plot.title = element_text(color = "midnightblue", size = 30, face = "bold", hjust = 0.5), 
-        legend.background = element_rect(color = "gray25", fill = "gray95"), 
-        legend.title = element_text(color = "midnightblue", size = 20, face = "bold", hjust = 0.5), 
-        legend.text = element_text(color = "midnightblue", size = 15, face = "bold", hjust = 0.5), 
-        legend.position = c(0.1, 0.01))
 
-ggsave(paste0(directory, "/outputs/smoking_prop_raster_plot.jpeg"), height = 8, width = 12, dpi = 600)
-```
-
-
-## Health Zone-Level - Static
-
-
-```{r message=FALSE, warning=FALSE}
 ggplot() + theme_map() + labs(title = "Smoking Prevalence (Proportion of Smokers)")  +
   geom_polygon(data = drc_health_zones_df, aes(x = long, y = lat, group = id, fill = pred_smoking_prop), color = "white", size = 0.8) +
-  scale_fill_viridis(option="plasma", direction = -1) + labs(fill = "Proportion of Smokers") +
+  scale_fill_viridis(option="inferno", direction = -1) + labs(fill = "Proportion of Smokers") +
   theme(plot.title = element_text(color = "darkblue", size = 30, face = "bold", hjust = 0.5), 
         legend.background = element_rect(color = "gray25", fill = "gray95"), 
         legend.title = element_text(color = "darkblue", size = 20, face = "bold", hjust = 0.5), 
@@ -459,7 +622,6 @@ ggplot() + theme_map() + labs(title = "Smoking Prevalence (Proportion of Smokers
 ggsave(paste0(directory, "/outputs/smoking_prop_healthzone.jpeg"), height = 8, width = 12, dpi = 600)
 ```
  
-
  
 ## Health Zone-Level - Interactive
     
